# sysml-obfuscate

./: .gitignore  README.md  __main__.py  pyproject.toml  sysml_obfuscate.py  test_drone.sysml  test_drone_full.sysml
